--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0013.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0013.html
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0013.png">
-      <!--<div class="ocr_carea" title="bbox 174 92 1966 2500">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 922 101 1931 144">
-        <span id="w_0" class="ocr_word" title="bbox 922 107 1189 144" xml:lang="grc">
+        <span id="w_0" class="ocr_word" title="bbox 922 107 1189 144" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">PΚΑrνΑι’ιο</ins>
+            <ins class="alt" title="nlp 0.94">ΚΑrνΑι’ιο</ins>
           </span>
         </span>
-        <span id="w_1" class="ocr_word" title="bbox 1880 101 1931 141" xml:lang="grc">
+        <span id="w_1" class="ocr_word" title="bbox 1880 101 1931 141" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ι</ins>
+            <ins title="nlp 2.00">ix</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 190 213 1929 278">
         <span id="w_2" class="ocr_word" title="bbox 190 222 419 278">
           <span class="alternatives">
@@ -153,9 +149,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 1875 284 1931 327" xml:lang="grc">
+        <span id="w_23" class="ocr_word" title="bbox 1875 284 1931 327" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Ι)2</ins>
+            <ins title="nlp 2.00">52</ins>
           </span>
         </span>
       </span>
@@ -184,7 +180,7 @@
             <del title="nlp 0.90">rationem,</del>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 874 376 956 403" xml:lang="grc">
+        <span id="w_28" class="ocr_word" title="bbox 874 376 956 403" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
           </span>
@@ -283,7 +279,7 @@
             <del title="nlp 0.90">haec</del>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1536 428 1796 484" xml:lang="grc">
+        <span id="w_45" class="ocr_word" title="bbox 1536 428 1796 484" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρόσληψις,</ins>
           </span>
@@ -320,65 +316,59 @@
             <del title="nlp 0.90">est:</del>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 833 502 906 546" xml:lang="grc">
+        <span id="w_51" class="ocr_word" title="bbox 833 502 906 546" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ναὶ</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 939 502 993 546" xml:lang="grc">
+        <span id="w_52" class="ocr_word" title="bbox 939 502 993 546" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_53" class="ocr_word" title="bbox 1037 501 1275 545" xml:lang="grc">
+        <span id="w_53" class="ocr_word" title="bbox 1037 501 1275 545" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀντίκειται</ins>
           </span>
         </span>
-        <span id="w_54" class="ocr_word" title="bbox 1314 500 1481 555" xml:lang="grc">
+        <span id="w_54" class="ocr_word" title="bbox 1314 500 1481 555" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀξίωμα</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 1524 499 1823 555" xml:lang="grc">
+        <span id="w_55" class="ocr_word" title="bbox 1524 499 1823 555" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καταφατικὸν</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1853 505 1933 557">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">r^’</ins>
+            <ins title="nlp 2.00">τῷ·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 191 569 1930 634">
-        <span id="w_57" class="ocr_word" title="bbox 191 578 284 623" xml:lang="grc">
+        <span id="w_57" class="ocr_word" title="bbox 191 578 284 623" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">Οὐκ</ins>
-            <del title="nlp 0.90">οὗκ</del>
-            <del title="nlp 0.89">οὑκ</del>
-            <del title="nlp 0.88">οὔκ</del>
-            <del title="nlp 0.87">οὒκ</del>
-            <del title="nlp 0.86">οὖκ</del>
-            <del title="nlp 0.85">οὐκ</del>
+            <ins title="nlp 2.00">Οὐκ</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 328 575 383 634" xml:lang="grc">
+        <span id="w_58" class="ocr_word" title="bbox 328 575 383 634" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ὴν</ins>
+            <ins title="nlp 2.00">ἧν</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 417 602 467 609">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 505 602 558 607">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 591 592 752 632" xml:lang="grc">
+        <span id="w_61" class="ocr_word" title="bbox 591 592 752 632" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀτιμία.</ins>
           </span>
@@ -405,7 +395,7 @@
             <del title="nlp 0.90">secuiidum</del>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1401 589 1456 615" xml:lang="grc">
+        <span id="w_66" class="ocr_word" title="bbox 1401 589 1456 615" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
@@ -416,7 +406,7 @@
             <del title="nlp 0.90">(ante</del>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 1664 569 1930 627" xml:lang="grc">
+        <span id="w_68" class="ocr_word" title="bbox 1664 569 1930 627" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Εὐριπίδης)</ins>
           </span>
@@ -454,8 +444,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 307 714 1934 776">
         <span id="w_74" class="ocr_word" title="bbox 307 719 461 765">
           <span class="alternatives">
@@ -525,7 +513,7 @@
         </span>
         <span id="w_85" class="ocr_word" title="bbox 352 807 427 848">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">sq.,</ins>
+            <ins title="nlp 2.00">ad</ins>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 459 792 511 834">
@@ -652,9 +640,9 @@
             <del title="nlp 0.90">Chrysippi,</del>
           </span>
         </span>
-        <span id="w_106" class="ocr_word" title="bbox 455 949 477 977" xml:lang="grc">
+        <span id="w_106" class="ocr_word" title="bbox 455 949 477 977" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ο</ins>
+            <ins title="nlp 2.00">e</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 497 949 582 991">
@@ -759,8 +747,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 312 1075 1939 1135">
         <span id="w_124" class="ocr_word" title="bbox 312 1078 569 1135">
           <span class="alternatives">
@@ -803,9 +789,9 @@
             <ins class="alt" title="nlp 1.00">1822</ins>
           </span>
         </span>
-        <span id="w_131" class="ocr_word" title="bbox 1895 1076 1939 1117" xml:lang="grc">
+        <span id="w_131" class="ocr_word" title="bbox 1895 1076 1939 1117" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">υ1</ins>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
       </span>
@@ -1028,17 +1014,11 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 1875 1376 1943 1405">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ex-</ins>
+            <ins title="nlp 2.00">exposui,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 1431 1944 1494">
-        <span id="w_168" class="ocr_word" title="bbox 196 1438 334 1494">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">posui,</ins>
-            <del title="nlp 0.90">exposui,</del>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 365 1439 414 1480">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ut</ins>
@@ -1083,17 +1063,11 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1864 1431 1944 1476">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ac-</ins>
+            <ins title="nlp 2.00">Accedit</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 196 1504 1943 1564">
-        <span id="w_177" class="ocr_word" title="bbox 196 1510 310 1552">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cedit</ins>
-            <del title="nlp 0.90">Accedit</del>
-          </span>
-        </span>
         <span id="w_178" class="ocr_word" title="bbox 340 1509 455 1564">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quod</ins>
@@ -1206,17 +1180,11 @@
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1857 1577 1944 1633">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ple-</ins>
+            <ins title="nlp 2.00">plerumque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 1648 1944 1708">
-        <span id="w_197" class="ocr_word" title="bbox 197 1666 376 1708">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rumque</ins>
-            <del title="nlp 0.90">plerumque</del>
-          </span>
-        </span>
         <span id="w_198" class="ocr_word" title="bbox 406 1651 517 1694">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">nihil</ins>
@@ -1389,17 +1357,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1724 1789 1947 1834">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Coramen-</ins>
+            <ins title="nlp 2.00">Commentarium</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 1864 1946 1922">
-        <span id="w_227" class="ocr_word" title="bbox 198 1868 351 1910">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tarium</ins>
-            <del title="nlp 0.90">Coramentarium</del>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 387 1867 558 1922">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quidem</ins>
@@ -1567,8 +1529,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 318 2078 1948 2137">
         <span id="w_255" class="ocr_word" title="bbox 318 2081 512 2124">
           <span class="alternatives">
@@ -1588,12 +1548,12 @@
             <del title="nlp 0.90">Chrysippi,</del>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1049 2095 1147 2136" xml:lang="grc">
+        <span id="w_258" class="ocr_word" title="bbox 1049 2095 1147 2136" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1191 2081 1403 2136" xml:lang="grc">
+        <span id="w_259" class="ocr_word" title="bbox 1191 2081 1403 2136" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προνοίας</ins>
           </span>
@@ -1604,17 +1564,14 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1528 2078 1627 2135" xml:lang="grc">
+        <span id="w_261" class="ocr_word" title="bbox 1528 2078 1627 2135" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1672 2078 1948 2135" xml:lang="grc">
+        <span id="w_262" class="ocr_word" title="bbox 1672 2078 1948 2135" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Λμαρμἐνης,</ins>
-            <del title="nlp 0.90">Εἱμαρμένης,</del>
-            <del title="nlp 0.89">εἱμαρμένης,</del>
-            <del title="nlp 0.88">μαρμαρίνης,</del>
+            <ins title="nlp 2.00">εἰμαρμένης,</ins>
           </span>
         </span>
       </span>
@@ -1868,17 +1825,11 @@
             <del title="nlp 0.90">rectius</del>
           </span>
         </span>
-        <span id="w_304" class="ocr_word" title="bbox 1880 2365 1949 2407">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ad-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 202 2439 825 2495">
         <span id="w_305" class="ocr_word" title="bbox 202 2439 412 2482">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ministari</ins>
-            <del title="nlp 0.90">administari</del>
+            <ins title="nlp 2.00">administari</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 445 2454 569 2495">
@@ -1894,10 +1845,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 188 2698 1970 3148">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 382 2711 1771 2768">
         <span id="w_308" class="ocr_word" title="bbox 382 2712 453 2758">
           <span class="alternatives">
@@ -1930,8 +1877,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 323 2795 1950 2853">
         <span id="w_313" class="ocr_word" title="bbox 323 2796 385 2841">
           <span class="alternatives">
@@ -2045,17 +1990,11 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 1858 2881 1952 2923">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pos-</ins>
+            <ins title="nlp 2.00">possint,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 2938 1953 2998">
-        <span id="w_332" class="ocr_word" title="bbox 206 2942 304 2995">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sint,</ins>
-            <del title="nlp 0.90">possint,</del>
-          </span>
-        </span>
         <span id="w_333" class="ocr_word" title="bbox 336 2941 519 2984">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">maxime</ins>
@@ -2112,17 +2051,11 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1845 2938 1953 2981">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iudi-</ins>
+            <ins title="nlp 2.00">iudicent.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 206 3009 1952 3069">
-        <span id="w_343" class="ocr_word" title="bbox 206 3014 314 3055">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cent.</ins>
-            <del title="nlp 0.90">iudicent.</del>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 374 3011 547 3068">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Itaque,</ins>
@@ -2234,8 +2167,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
