--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0014.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0014.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0014.png">
-      <!--<div class="ocr_carea" title="bbox 230 194 2000 3214">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 250 196 1248 235">
         <span id="w_0" class="ocr_word" title="bbox 250 196 282 235">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 251 306 1979 364">
         <span id="w_2" class="ocr_word" title="bbox 251 306 356 349">
           <span class="alternatives">
@@ -88,17 +84,11 @@
             <del title="nlp 0.90">Chrysippum</del>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1848 312 1979 352">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rettu-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 251 377 1422 436">
         <span id="w_13" class="ocr_word" title="bbox 251 377 373 420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lerim</ins>
-            <del title="nlp 0.90">rettulerim</del>
+            <ins title="nlp 2.00">rettulerim</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 405 392 564 433">
@@ -138,8 +128,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 927 506 1306 553">
         <span id="w_20" class="ocr_word" title="bbox 927 508 998 551">
           <span class="alternatives">
@@ -154,8 +142,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 365 590 1980 648">
         <span id="w_22" class="ocr_word" title="bbox 365 590 623 633">
           <span class="alternatives">
@@ -635,17 +621,11 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1885 1088 1983 1130">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Plu-</ins>
+            <ins title="nlp 2.00">Plutarcho</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 248 1159 1982 1216">
-        <span id="w_100" class="ocr_word" title="bbox 248 1159 397 1201">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tarcho</ins>
-            <del title="nlp 0.90">Plutarcho</del>
-          </span>
-        </span>
         <span id="w_101" class="ocr_word" title="bbox 434 1161 556 1201">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">tanta</ins>
@@ -758,17 +738,11 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1855 1229 1983 1273">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inter-</ins>
+            <ins title="nlp 2.00">intercederent,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 249 1300 1982 1357">
-        <span id="w_120" class="ocr_word" title="bbox 249 1301 456 1357">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cederent,</ins>
-            <del title="nlp 0.90">intercederent,</del>
-          </span>
-        </span>
         <span id="w_121" class="ocr_word" title="bbox 486 1303 631 1356">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">posset</ins>
@@ -869,17 +843,11 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1900 1387 1983 1414">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">me-</ins>
+            <ins title="nlp 2.00">melius</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 1442 1981 1500">
-        <span id="w_138" class="ocr_word" title="bbox 247 1442 331 1485">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lius</ins>
-            <del title="nlp 0.90">melius</del>
-          </span>
-        </span>
         <span id="w_139" class="ocr_word" title="bbox 363 1443 536 1486">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">cessisse</ins>
@@ -1360,17 +1328,11 @@
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1892 2012 1984 2055">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dili-</ins>
+            <ins title="nlp 2.00">diligentioris</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 2084 1983 2142">
-        <span id="w_217" class="ocr_word" title="bbox 247 2084 455 2142">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gentioris</ins>
-            <del title="nlp 0.90">diligentioris</del>
-          </span>
-        </span>
         <span id="w_218" class="ocr_word" title="bbox 486 2085 532 2127">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">in</ins>
@@ -1421,17 +1383,11 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1883 2084 1983 2140">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Epi-</ins>
+            <ins title="nlp 2.00">Epicteteis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 2154 1982 2214">
-        <span id="w_227" class="ocr_word" title="bbox 247 2155 396 2199">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cteteis</ins>
-            <del title="nlp 0.90">Epicteteis</del>
-          </span>
-        </span>
         <span id="w_228" class="ocr_word" title="bbox 428 2154 468 2213">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(I</ins>
@@ -1537,17 +1493,11 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1874 2227 1983 2269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vale-</ins>
+            <ins title="nlp 2.00">valerent,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 245 2298 1982 2355">
-        <span id="w_246" class="ocr_word" title="bbox 245 2302 353 2355">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rent,</ins>
-            <del title="nlp 0.90">valerent,</del>
-          </span>
-        </span>
         <span id="w_247" class="ocr_word" title="bbox 384 2299 464 2342">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">hac</ins>
@@ -1604,17 +1554,11 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1887 2313 1982 2353">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">profecissent.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 249 2369 1982 2426">
-        <span id="w_257" class="ocr_word" title="bbox 249 2369 463 2412">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fecissent.</ins>
-            <del title="nlp 0.90">profecissent.</del>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 512 2369 656 2426">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Atque</ins>
@@ -1827,17 +1771,11 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1861 2596 1983 2636">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quas-</ins>
+            <ins title="nlp 2.00">quasdam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 248 2652 1978 2711">
-        <span id="w_293" class="ocr_word" title="bbox 248 2654 344 2696">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dam</ins>
-            <del title="nlp 0.90">quasdam</del>
-          </span>
-        </span>
         <span id="w_294" class="ocr_word" title="bbox 378 2655 647 2697">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">arcessivisse</ins>
@@ -1869,39 +1807,37 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1166 2655 1240 2696">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">34:</ins>
+            <ins title="nlp 2.00">34:</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 1274 2655 1531 2709" xml:lang="grc">
+        <span id="w_300" class="ocr_word" title="bbox 1274 2655 1531 2709" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ΕΙσαγωγὰς</ins>
-            <del title="nlp 0.90">εἰσαγωγάς</del>
-            <del title="nlp 0.89">εἰσαγωγὰς</del>
+            <ins title="nlp 2.00">Εἰσαγωγὰς</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 1563 2652 1725 2709" xml:lang="grc">
+        <span id="w_301" class="ocr_word" title="bbox 1563 2652 1725 2709" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔπραξά</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 1757 2669 1878 2703" xml:lang="grc">
+        <span id="w_302" class="ocr_word" title="bbox 1757 2669 1878 2703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινας</ins>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 1910 2668 1978 2695" xml:lang="grc">
+        <span id="w_303" class="ocr_word" title="bbox 1910 2668 1978 2695" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 249 2722 1980 2781">
-        <span id="w_304" class="ocr_word" title="bbox 249 2727 525 2781" xml:lang="grc">
+        <span id="w_304" class="ocr_word" title="bbox 249 2727 525 2781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Χρυσίππεια</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 569 2725 768 2781" xml:lang="grc">
+        <span id="w_305" class="ocr_word" title="bbox 569 2725 768 2781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνέγνων</ins>
           </span>
@@ -1920,84 +1856,84 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1032 2725 1184 2781">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">17,40:</ins>
+            <ins title="nlp 2.00">17,40:</ins>
           </span>
         </span>
-        <span id="w_309" class="ocr_word" title="bbox 1229 2740 1312 2767" xml:lang="grc">
+        <span id="w_309" class="ocr_word" title="bbox 1229 2740 1312 2767" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κἂν</ins>
           </span>
         </span>
-        <span id="w_310" class="ocr_word" title="bbox 1352 2736 1492 2775" xml:lang="grc">
+        <span id="w_310" class="ocr_word" title="bbox 1352 2736 1492 2775" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάσας</ins>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 1529 2726 1605 2774" xml:lang="grc">
+        <span id="w_311" class="ocr_word" title="bbox 1529 2726 1605 2774" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 1636 2736 1877 2779" xml:lang="grc">
+        <span id="w_312" class="ocr_word" title="bbox 1636 2736 1877 2779" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰσαγωγὰς</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 1909 2722 1980 2766" xml:lang="grc">
+        <span id="w_313" class="ocr_word" title="bbox 1909 2722 1980 2766" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 248 2795 1980 2852">
-        <span id="w_314" class="ocr_word" title="bbox 248 2798 323 2847" xml:lang="grc">
+        <span id="w_314" class="ocr_word" title="bbox 248 2798 323 2847" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_315" class="ocr_word" title="bbox 355 2796 581 2847" xml:lang="grc">
+        <span id="w_315" class="ocr_word" title="bbox 355 2796 581 2847" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συντάξεις</ins>
           </span>
         </span>
-        <span id="w_316" class="ocr_word" title="bbox 611 2798 687 2847" xml:lang="grc">
+        <span id="w_316" class="ocr_word" title="bbox 611 2798 687 2847" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_317" class="ocr_word" title="bbox 718 2800 981 2852" xml:lang="grc">
+        <span id="w_317" class="ocr_word" title="bbox 718 2800 981 2852" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Χρυσίππου</ins>
           </span>
         </span>
-        <span id="w_318" class="ocr_word" title="bbox 1019 2797 1123 2850" xml:lang="grc">
+        <span id="w_318" class="ocr_word" title="bbox 1019 2797 1123 2850" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μετὰ</ins>
           </span>
         </span>
-        <span id="w_319" class="ocr_word" title="bbox 1160 2812 1248 2839" xml:lang="grc">
+        <span id="w_319" class="ocr_word" title="bbox 1160 2812 1248 2839" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_320" class="ocr_word" title="bbox 1288 2795 1571 2852" xml:lang="grc">
+        <span id="w_320" class="ocr_word" title="bbox 1288 2795 1571 2852" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἀντιπάτρου</ins>
           </span>
         </span>
-        <span id="w_321" class="ocr_word" title="bbox 1608 2796 1680 2838" xml:lang="grc">
+        <span id="w_321" class="ocr_word" title="bbox 1608 2796 1680 2838" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_322" class="ocr_word" title="bbox 1718 2795 1980 2850" xml:lang="grc">
+        <span id="w_322" class="ocr_word" title="bbox 1718 2795 1980 2850" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἀρχεδήμου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 248 2866 1980 2925">
-        <span id="w_323" class="ocr_word" title="bbox 248 2866 514 2925" xml:lang="grc">
+        <span id="w_323" class="ocr_word" title="bbox 248 2866 514 2925" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διέλθωμεν)</ins>
           </span>
@@ -2114,17 +2050,11 @@
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1888 2935 1982 2979">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sto-</ins>
+            <ins title="nlp 2.00">Stobaeum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 246 3008 1980 3066">
-        <span id="w_343" class="ocr_word" title="bbox 246 3010 400 3053">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">baeum</ins>
-            <del title="nlp 0.90">Stobaeum</del>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 432 3011 635 3066">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exempla.</ins>
@@ -2250,8 +2180,7 @@
       <span class="ocr_line" title="bbox 247 3151 1978 3210">
         <span id="w_364" class="ocr_word" title="bbox 247 3152 370 3209">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disse,</ins>
-            <del title="nlp 0.90">dedisse,</del>
+            <ins title="nlp 2.00">dedisse,</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 403 3153 515 3196">
@@ -2315,8 +2244,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
