--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0019.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0019.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0019.png">
-      <!--<div class="ocr_carea" title="bbox 192 152 1984 3130">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 954 159 1963 199">
         <span id="w_0" class="ocr_word" title="bbox 954 160 1220 195">
           <span class="alternatives">
@@ -24,8 +22,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 217 266 1965 326">
         <span id="w_2" class="ocr_word" title="bbox 217 271 360 312">
           <span class="alternatives">
@@ -120,8 +116,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 334 409 1966 468">
         <span id="w_17" class="ocr_word" title="bbox 334 409 425 454">
           <span class="alternatives">
@@ -757,17 +751,11 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1891 1128 1966 1172">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ali-</ins>
+            <ins title="nlp 2.00">aliquoties</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 1198 1962 1258">
-        <span id="w_120" class="ocr_word" title="bbox 212 1198 382 1253">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quoties</ins>
-            <del title="nlp 0.90">aliquoties</del>
-          </span>
-        </span>
         <span id="w_121" class="ocr_word" title="bbox 426 1201 657 1254">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">spectatur,</ins>
@@ -925,8 +913,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 332 1483 1964 1543">
         <span id="w_146" class="ocr_word" title="bbox 332 1483 475 1541">
           <span class="alternatives">
@@ -1038,25 +1024,24 @@
             <del title="nlp 0.90">libro</del>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 1383 1559 1484 1616" xml:lang="grc">
+        <span id="w_164" class="ocr_word" title="bbox 1383 1559 1484 1616" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 1516 1576 1596 1603" xml:lang="grc">
+        <span id="w_165" class="ocr_word" title="bbox 1516 1576 1596 1603" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_166" class="ocr_word" title="bbox 1634 1559 1965 1616" xml:lang="grc">
+        <span id="w_166" class="ocr_word" title="bbox 1634 1559 1965 1616" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">ἐμφαινομένου</ins>
-            <del title="nlp 0.90">ἐμφαινομἐνου</del>
+            <ins title="nlp 2.00">ἐμφαινομένου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 210 1628 1965 1688">
-        <span id="w_167" class="ocr_word" title="bbox 210 1639 453 1683" xml:lang="grc">
+        <span id="w_167" class="ocr_word" title="bbox 210 1639 453 1683" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσώπου</ins>
           </span>
@@ -1111,17 +1096,11 @@
         </span>
         <span id="w_176" class="ocr_word" title="bbox 1832 1631 1965 1688">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Chry-</ins>
+            <ins title="nlp 2.00">Chrysippea</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 211 1699 1963 1759">
-        <span id="w_177" class="ocr_word" title="bbox 211 1699 360 1755">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sippea</ins>
-            <del title="nlp 0.90">Chrysippea</del>
-          </span>
-        </span>
         <span id="w_178" class="ocr_word" title="bbox 410 1714 514 1743">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">esse.</ins>
@@ -1307,33 +1286,29 @@
             <del title="nlp 0.90">addat:</del>
           </span>
         </span>
-        <span id="w_208" class="ocr_word" title="bbox 398 1915 471 1959" xml:lang="grc">
+        <span id="w_208" class="ocr_word" title="bbox 398 1915 471 1959" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_209" class="ocr_word" title="bbox 503 1916 546 1959" xml:lang="grc">
+        <span id="w_209" class="ocr_word" title="bbox 503 1916 546 1959" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">οΙ</ins>
+            <ins title="nlp 2.00">οἱ</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 582 1919 779 1960" xml:lang="grc">
+        <span id="w_210" class="ocr_word" title="bbox 582 1919 779 1960" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πλεῖστοι</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 817 1924 906 1960" xml:lang="grc">
+        <span id="w_211" class="ocr_word" title="bbox 817 1924 906 1960" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">τΦν</ins>
-            <del title="nlp 0.90">τἀν</del>
-            <del title="nlp 0.89">τἂν</del>
-            <del title="nlp 0.88">τἄν</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 938 1921 1165 1961" xml:lang="grc">
+        <span id="w_212" class="ocr_word" title="bbox 938 1921 1165 1961" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">Στωὶ·κῶν.</ins>
-            <del title="nlp 0.90">στωικῶν.</del>
+            <ins title="nlp 2.00">Στωϊκῶν.</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1228 1917 1345 1969">
@@ -1428,7 +1403,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 1742 1991 1963 2047">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disputan-</ins>
+            <ins title="nlp 2.00">disputantur,</ins>
           </span>
         </span>
       </span>
@@ -1489,31 +1464,29 @@
         </span>
         <span id="w_238" class="ocr_word" title="bbox 1710 2062 1962 2106">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inscribitur</ins>
-            <del title="nlp 0.90">inscribitur</del>
+            <ins title="nlp 2.00">inscribitur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 2128 1960 2192">
-        <span id="w_239" class="ocr_word" title="bbox 208 2128 338 2186" xml:lang="grc">
+        <span id="w_239" class="ocr_word" title="bbox 208 2128 338 2186" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">,,περὶ</ins>
+            <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 370 2147 450 2174" xml:lang="grc">
+        <span id="w_240" class="ocr_word" title="bbox 370 2147 450 2174" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 482 2146 662 2188" xml:lang="grc">
+        <span id="w_241" class="ocr_word" title="bbox 482 2146 662 2188" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρώτου</ins>
           </span>
         </span>
-        <span id="w_242" class="ocr_word" title="bbox 694 2134 898 2189" xml:lang="grc">
+        <span id="w_242" class="ocr_word" title="bbox 694 2134 898 2189" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">ψυχροῦ“</ins>
-            <del title="nlp 0.90">ψυχροῦ“</del>
+            <ins title="nlp 2.00">ψυχροῦ ”</ins>
           </span>
         </span>
         <span id="w_243" class="ocr_word" title="bbox 931 2148 1039 2189">
@@ -1579,7 +1552,7 @@
         </span>
         <span id="w_253" class="ocr_word" title="bbox 686 2230 742 2236">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 749 2206 802 2247">
@@ -1655,37 +1628,34 @@
             <del title="nlp 0.90">Chrysippo</del>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1609 2277 1678 2336" xml:lang="grc">
+        <span id="w_266" class="ocr_word" title="bbox 1609 2277 1678 2336" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(ἐν</ins>
+            <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 1709 2295 1770 2321" xml:lang="grc">
+        <span id="w_267" class="ocr_word" title="bbox 1709 2295 1770 2321" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ῳ</ins>
+            <ins title="nlp 2.00">τῷ</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1801 2294 1959 2335" xml:lang="grc">
+        <span id="w_268" class="ocr_word" title="bbox 1801 2294 1959 2335" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρώτῳ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 2347 1959 2407">
-        <span id="w_269" class="ocr_word" title="bbox 208 2353 297 2388" xml:lang="grc">
+        <span id="w_269" class="ocr_word" title="bbox 208 2353 297 2388" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">τΦν</ins>
-            <del title="nlp 0.90">τἀν</del>
-            <del title="nlp 0.89">τἂν</del>
-            <del title="nlp 0.88">τἄν</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 329 2358 533 2401" xml:lang="grc">
+        <span id="w_270" class="ocr_word" title="bbox 329 2358 533 2401" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φυσικῶν</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 565 2347 836 2405" xml:lang="grc">
+        <span id="w_271" class="ocr_word" title="bbox 565 2347 836 2405" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ζητημάτων)</ins>
           </span>
@@ -1843,17 +1813,11 @@
             <del title="nlp 0.90">valde</del>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 1817 2494 1960 2537">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dolen-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 209 2560 419 2604">
         <span id="w_298" class="ocr_word" title="bbox 209 2560 310 2603">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dum</ins>
-            <del title="nlp 0.90">dolendum</del>
+            <ins title="nlp 2.00">dolendum</ins>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 342 2564 419 2604">
@@ -1863,8 +1827,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 325 2632 1957 2694">
         <span id="w_300" class="ocr_word" title="bbox 325 2632 472 2676">
           <span class="alternatives">
@@ -1978,12 +1940,12 @@
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1647 2711 1723 2766">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„de</ins>
+            <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
         <span id="w_319" class="ocr_word" title="bbox 1755 2711 1958 2768">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">repugn."</ins>
+            <ins title="nlp 2.00">repugn."</ins>
           </span>
         </span>
       </span>
@@ -2026,7 +1988,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1419 2781 1496 2838">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">„de</ins>
+            <ins title="nlp 2.00">„de</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1522 2796 1673 2825">
@@ -2037,22 +1999,16 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1699 2783 1812 2825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">not."</ins>
+            <ins title="nlp 2.00">not."</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1837 2797 1959 2825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">usur-</ins>
+            <ins title="nlp 2.00">usurpentur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 2850 1958 2909">
-        <span id="w_330" class="ocr_word" title="bbox 208 2851 364 2903">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pentur</ins>
-            <del title="nlp 0.90">usurpentur</del>
-          </span>
-        </span>
         <span id="w_331" class="ocr_word" title="bbox 404 2851 452 2890">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ut</ins>
@@ -2097,17 +2053,11 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1890 2854 1958 2897">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">de-</ins>
+            <ins title="nlp 2.00">demonstretur,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 208 2921 1956 2981">
-        <span id="w_339" class="ocr_word" title="bbox 208 2923 485 2975">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">monstretur,</ins>
-            <del title="nlp 0.90">demonstretur,</del>
-          </span>
-        </span>
         <span id="w_340" class="ocr_word" title="bbox 515 2935 601 2963">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">uno</ins>
@@ -2269,8 +2219,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
