--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0020.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0020.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0020.png">
-      <!--<div class="ocr_carea" title="bbox 240 160 2012 3174">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 257 167 1252 203">
         <span id="w_0" class="ocr_word" title="bbox 257 167 374 203">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 257 273 1989 330">
         <span id="w_2" class="ocr_word" title="bbox 257 275 465 318">
           <span class="alternatives">
@@ -146,17 +142,11 @@
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1886 349 1990 388">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tem-</ins>
+            <ins title="nlp 2.00">temporum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 414 1990 473">
-        <span id="w_22" class="ocr_word" title="bbox 258 432 409 473">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">porum</ins>
-            <del title="nlp 0.90">temporum</del>
-          </span>
-        </span>
         <span id="w_23" class="ocr_word" title="bbox 441 416 699 471">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exemplaria</ins>
@@ -207,17 +197,11 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1907 417 1990 458">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sin-</ins>
+            <ins title="nlp 2.00">sinceritatemque,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 259 484 1989 543">
-        <span id="w_32" class="ocr_word" title="bbox 259 487 574 543">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ceritatemque,</ins>
-            <del title="nlp 0.90">sinceritatemque,</del>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 607 501 713 541">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quae</ins>
@@ -312,17 +296,11 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 1916 558 1990 599">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">im-</ins>
+            <ins title="nlp 2.00">impugnaverunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 626 1989 685">
-        <span id="w_49" class="ocr_word" title="bbox 258 631 556 685">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pugnaverunt</ins>
-            <del title="nlp 0.90">impugnaverunt</del>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 581 630 624 669">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
@@ -547,17 +525,11 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1897 839 1993 881">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">doc-</ins>
+            <ins title="nlp 2.00">doctrinam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 908 1990 965">
-        <span id="w_87" class="ocr_word" title="bbox 258 912 416 954">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">trinam</ins>
-            <del title="nlp 0.90">doctrinam</del>
-          </span>
-        </span>
         <span id="w_88" class="ocr_word" title="bbox 447 925 643 953">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">enarrare</ins>
@@ -726,17 +698,11 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1923 1066 1994 1093">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">au-</ins>
+            <ins title="nlp 2.00">aucupati</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 259 1121 1993 1181">
-        <span id="w_116" class="ocr_word" title="bbox 259 1125 403 1181">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cupati</ins>
-            <del title="nlp 0.90">aucupati</del>
-          </span>
-        </span>
         <span id="w_117" class="ocr_word" title="bbox 430 1139 588 1167">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sumus.</ins>
@@ -781,17 +747,11 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1830 1125 1993 1163">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mutua-</ins>
+            <ins title="nlp 2.00">mutuatur,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 258 1191 1993 1253">
-        <span id="w_125" class="ocr_word" title="bbox 258 1200 346 1253">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur,</ins>
-            <del title="nlp 0.90">mutuatur,</del>
-          </span>
-        </span>
         <span id="w_126" class="ocr_word" title="bbox 377 1209 513 1251">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">neque</ins>
@@ -960,17 +920,11 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1933 1349 1994 1377">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">re-</ins>
+            <ins title="nlp 2.00">recipiamus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 259 1405 1993 1465">
-        <span id="w_154" class="ocr_word" title="bbox 259 1409 477 1465">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cipiamus,</ins>
-            <del title="nlp 0.90">recipiamus,</del>
-          </span>
-        </span>
         <span id="w_155" class="ocr_word" title="bbox 522 1422 704 1463">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quorum</ins>
@@ -1437,17 +1391,11 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1884 1904 1994 1943">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vete-</ins>
+            <ins title="nlp 2.00">veterum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 260 1972 1994 2032">
-        <span id="w_231" class="ocr_word" title="bbox 260 1993 355 2019">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rum</ins>
-            <del title="nlp 0.90">veterum</del>
-          </span>
-        </span>
         <span id="w_232" class="ocr_word" title="bbox 399 1976 592 2032">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exempla</ins>
@@ -1572,17 +1520,11 @@
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1815 2043 1995 2085">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">auctori-</ins>
+            <ins title="nlp 2.00">auctoribus,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 261 2114 1994 2175">
-        <span id="w_253" class="ocr_word" title="bbox 261 2121 352 2175">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">bus,</ins>
-            <del title="nlp 0.90">auctoribus,</del>
-          </span>
-        </span>
         <span id="w_254" class="ocr_word" title="bbox 396 2119 470 2174">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">qui</ins>
@@ -1863,17 +1805,11 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1812 2398 1995 2454">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">produn-</ins>
+            <ins title="nlp 2.00">produmtur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 261 2470 1995 2530">
-        <span id="w_300" class="ocr_word" title="bbox 261 2479 333 2518">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tur</ins>
-            <del title="nlp 0.90">produntur</del>
-          </span>
-        </span>
         <span id="w_301" class="ocr_word" title="bbox 363 2476 430 2518">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vel</ins>
@@ -1930,7 +1866,7 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1901 2483 1995 2524">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">probari</ins>
           </span>
         </span>
       </span>
@@ -2414,8 +2350,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
